Fix mobile hamburger menu visibility on GitHub Pages

--- a/style.css
+++ b/style.css
@@ -567,6 +567,10 @@ footer{
     width:100%;
   }
 
+  .menu-toggle{
+    display:flex;
+  }
+
   nav ul.active{
     display:flex;
   }
